Fix share preview

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Village Residential</title>
-  <meta name="description" content="Get in touch with Village Residential LLC — Raleigh, NC general contractor. Reach out about remodels, flips, new construction, or partnerships." />
+  <meta name="description" content="Get in touch with Village Residential — reach out about remodels, flips, new construction, or partnerships." />
   <link rel="canonical" href="https://villageresidential.co/contact.html" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Contact | Village Residential" />
+  <meta property="og:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta property="og:image" content="https://villageresidential.co/og-image.png" />
+  <meta property="og:url" content="https://villageresidential.co/contact.html" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Contact | Village Residential" />
+  <meta name="twitter:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta name="twitter:image" content="https://villageresidential.co/og-image.png" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
