--- a/about.html
+++ b/about.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Village Residential</title>
-  <meta name="description" content="Learn about Village Residential LLC — a woman-owned general contracting company founded in Raleigh, NC in 2023 with over a decade of construction experience." />
+  <meta name="description" content="Learn about Village Residential — a woman-owned general contracting company founded in Raleigh, NC with over a decade of construction experience." />
   <link rel="canonical" href="https://villageresidential.co/about.html" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="About | Village Residential" />
+  <meta property="og:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta property="og:image" content="https://villageresidential.co/og-image.png" />
+  <meta property="og:url" content="https://villageresidential.co/about.html" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About | Village Residential" />
+  <meta name="twitter:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta name="twitter:image" content="https://villageresidential.co/og-image.png" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
