--- a/about.html
+++ b/about.html
@@ -8,13 +8,14 @@
   <link rel="canonical" href="https://villageresidential.co/about.html" />
   <!-- Open Graph -->
   <meta property="og:title" content="About | Village Residential" />
-  <meta property="og:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta property="og:description" content="Homes built with purpose. Neighborhoods made better." />
   <meta property="og:image" content="https://villageresidential.co/og-image.png" />
   <meta property="og:url" content="https://villageresidential.co/about.html" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Village Residential" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="About | Village Residential" />
-  <meta name="twitter:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta name="twitter:description" content="Homes built with purpose. Neighborhoods made better." />
   <meta name="twitter:image" content="https://villageresidential.co/og-image.png" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
