--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Village Residential | Woman-Owned General Contractor</title>
-  <meta name="description" content="Village Residential is a woman-owned general contracting company specializing in full home remodels, residential flips, and new construction in the greater Raleigh area." />
+  <title>Village Residential</title>
+  <meta name="description" content="Homes built with purpose. Neighborhoods made better. Village Residential specializes in full home remodels, residential flips, and new construction in the greater Raleigh area." />
   <link rel="canonical" href="https://villageresidential.co/" />
   <!-- Open Graph -->
   <meta property="og:title" content="Village Residential" />
-  <meta property="og:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta property="og:description" content="Homes built with purpose. Neighborhoods made better." />
   <meta property="og:image" content="https://villageresidential.co/og-image.png" />
   <meta property="og:url" content="https://villageresidential.co/" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Village Residential" />
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Village Residential" />
-  <meta name="twitter:description" content="Woman-owned general contractor specializing in full home remodels, residential flips, and new construction." />
+  <meta name="twitter:description" content="Homes built with purpose. Neighborhoods made better." />
   <meta name="twitter:image" content="https://villageresidential.co/og-image.png" />
   <link rel="stylesheet" href="style.css" />
   <!-- Google Fonts -->
